# IntelliNote5000

./: .env.example  .eslintrc.cjs  App.tsx  README.md  big_verify_script.sh  capacitor.config.ts  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.cjs  types.ts  vite.config.ts
.github/workflows/: ci.yml
android/app/src/main/: AndroidManifest.xml
components/: DiagnosticsPanel.tsx  ErrorBoundary.tsx  FileUploadModal.tsx  LiveNoteTaker.tsx  MainPanel.tsx  SettingsModal.tsx  Sidebar.tsx  ToastViewport.tsx  icons.tsx
docs/: apple-release-checklist.md
ios/App/App/: Info.plist
services/: aiPrompts.ts  aiService.ts  geminiService.ts
services/providers/: errors.ts  geminiProvider.ts  index.ts  openAiProvider.ts  types.ts
services/stt/: deepgramProvider.ts  errors.ts  index.ts  probe.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  secure_storage.rs
tools/: build-info.mjs  ios-archive.mjs  package-mac-test.mjs  release-tauri.mjs  set-vite-env.mjs  verify-release.mjs
types/: ai.ts  stt.ts
utils/: apiConfig.ts  appReset.ts  autoGenerationConfig.ts  buildLabel.ts  credentialCleanup.ts  credentialPolicy.ts  diagnosticsBundle.ts  diagnosticsConfig.ts  env.ts  fileParser.ts  logger.ts  native.ts  redaction.ts  ringBuffer.ts  secureStorage.ts  sessionStorage.ts  sttProbe.ts  toastStore.ts  transcript.ts  transcriptionConfig.ts  transcriptionStorage.ts
verification_scripts/: big_verify_script.sh  transcript_pipeline.test.ts  unit.test.ts  verify_dev_setup.sh  verify_platforms.ts  verify_providers.ts
