[package]
name = "intellinote5000"
version = "0.1.0"
description = "IntelliNote desktop shell"
authors = ["IntelliNote Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = [
    "shell-open",
    "dialog-all",
    "fs-read-file",
    "fs-write-file",
    "http-all",
    "macos-private-api"
] }
keyring = "2.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
